--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="flying_silver">#BCBCBC</color>
     <color name="pink_psychic">#F652A0</color>
     <color name="orange_fire">#EF3510</color>
+    <color name="buttom_trade">#5887ff</color>
 </resources>
