--- a/app/src/main/res/layout/fragment_pokemon_detail.xml
+++ b/app/src/main/res/layout/fragment_pokemon_detail.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/menuDetalhado"
         app:layout_constraintStart_toStartOf="parent"
-        android:backgroundTint="@color/red">
+        android:background="@color/red">
 
         <TextView
             android:layout_width="wrap_content"
@@ -104,19 +104,21 @@
         android:layout_height="100dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/white"
+        android:backgroundTint="@color/white"
         app:layout_constraintTop_toBottomOf="@+id/menuVermelho"
         >
         <androidx.cardview.widget.CardView
             android:layout_width="100dp"
             android:layout_height="match_parent"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:backgroundTint="@color/white">
 
             <TextView
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="@string/Bulbasaur"
-                android:layout_gravity="center_horizontal">
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/black">
 
             </TextView>
 
@@ -132,6 +134,52 @@
 
         </androidx.cardview.widget.CardView>
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:text="151# Mew"
+            android:textSize="10dp"
+            android:backgroundTint="@color/buttom_trade">
+
+        </Button>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:text="002# Ivysaur"
+            android:textSize="10dp"
+            android:layout_gravity="end"
+            android:backgroundTint="@color/buttom_trade">
+
+        </Button>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom"
+            android:backgroundTint="@color/white">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Location:"
+                android:textColor="@color/black"
+                android:textSize="10dp">
+
+            </TextView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Via Trade"
+                android:textColor="@color/black"
+                android:textSize="10dp"
+                android:layout_gravity="center">
+
+            </TextView>
+
+        </androidx.cardview.widget.CardView>
+
 
     </com.google.android.material.card.MaterialCardView>
 
@@ -143,7 +191,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@+id/menuDetalhado"
-        tools:layout_editor_absoluteX="0dp">
+        tools:layout_editor_absoluteX="0dp"
+        android:backgroundTint="@color/white">
 
         <TextView
             android:id="@+id/evolutionTitle"
@@ -151,7 +200,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="2dp"
-            android:text="@string/Evoluções">
+            android:text="@string/Evoluções"
+            android:textColor="@color/black">
 
         </TextView>
 
@@ -160,12 +210,14 @@
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="80dp"
-            android:layout_marginTop="5dp">
+            android:layout_marginTop="5dp"
+            android:backgroundTint="@color/white">
 
             <TextView
                 android:layout_width="70dp"
                 android:layout_height="match_parent"
-                android:text="@string/Bulbasaur">
+                android:text="@string/Bulbasaur"
+                android:textColor="@color/black">
 
             </TextView>
 
@@ -183,13 +235,15 @@
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="170dp"
-            android:layout_marginTop="5dp">
+            android:layout_marginTop="5dp"
+            android:backgroundTint="@color/white">
 
             <TextView
                 android:layout_width="70dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="10dp"
-                android:text="@string/ivysaur">
+                android:text="@string/ivysaur"
+                android:textColor="@color/black">
 
             </TextView>
 
@@ -205,12 +259,14 @@
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="260dp"
-            android:layout_marginTop="5dp">
+            android:layout_marginTop="5dp"
+            android:backgroundTint="@color/white">
 
             <TextView
                 android:layout_width="70dp"
                 android:layout_height="match_parent"
-                android:text="@string/venosaur">
+                android:text="@string/venosaur"
+                android:textColor="@color/black">
 
             </TextView>
 
@@ -235,13 +291,15 @@
         android:layout_marginStart="8dp"
         app:layout_constraintTop_toBottomOf="@+id/evolution"
         app:layout_constraintStart_toStartOf="parent"
-        tools:context=".acitivy.SkillActivity">
+        tools:context=".acitivy.SkillActivity"
+        android:backgroundTint="@color/white">
 
         <TextView
             android:id="@+id/type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/type">
+            android:text="@string/type"
+            android:textColor="@color/black">
         </TextView>
 
         <GridLayout
@@ -257,9 +315,8 @@
                 android:layout_marginTop="25dp"
                 android:backgroundTint="@color/green"
                 android:text="@string/grass"
-                android:textColor="#0D47A1"
                 android:textSize="10dp"
-                tools:ignore="SpUsage"></Button>
+                tools:ignore="SpUsage" />
 
             <Button
                 android:id="@+id/typePoison"
@@ -284,18 +341,21 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@+id/card"
         app:layout_constraintTop_toBottomOf="@+id/evolution"
-        android:layout_marginStart="10dp">
+        android:layout_marginStart="10dp"
+        android:backgroundTint="@color/white">
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
             >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/Ability"
                 android:textStyle="bold"
-                android:layout_marginTop="20dp">
+                android:layout_marginTop="20dp"
+                android:textColor="@color/black">
 
             </TextView>
 
@@ -304,14 +364,16 @@
                 android:layout_height="wrap_content"
                 android:text="@string/Gender"
                 android:textStyle="bold"
-                android:layout_marginTop="42dp">
+                android:layout_marginTop="42dp"
+                android:textColor="@color/black">
 
             </TextView>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/Classification"
-                android:textStyle="bold">
+                android:textStyle="bold"
+                android:textColor="@color/black">
 
             </TextView>
 
@@ -338,7 +400,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/Seed"
-                android:layout_marginStart="100dp">
+                android:layout_marginStart="100dp"
+                android:textColor="@color/black">
 
             </TextView>
             <TextView
@@ -346,7 +409,8 @@
                 android:layout_height="wrap_content"
                 android:text="@string/Overgrow"
                 android:layout_marginStart="100dp"
-                android:layout_marginTop="20dp">
+                android:layout_marginTop="20dp"
+                android:textColor="@color/black">
 
             </TextView>
 
@@ -362,12 +426,14 @@
         app:layout_constraintTop_toBottomOf="@+id/card"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="8dp"
-        android:layout_marginStart="8dp">
+        android:layout_marginStart="8dp"
+        android:backgroundTint="@color/white">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/weakness">
+            android:text="@string/weakness"
+            android:textColor="@color/black">
         </TextView>
 
         <GridLayout
@@ -383,7 +449,6 @@
                 android:layout_marginTop="25dp"
                 android:backgroundTint="@color/orange_fire"
                 android:text="@string/fire"
-                android:textColor="#000000"
                 android:textSize="10dp"
                 tools:ignore="SpUsage" />
 
@@ -395,7 +460,6 @@
                 android:layout_marginTop="25dp"
                 android:backgroundTint="@color/flying_blue"
                 android:text="@string/flying"
-                android:textColor="#5D4037"
                 android:textSize="10dp"
                 tools:ignore="SpUsage" />
 
@@ -407,7 +471,6 @@
                 android:layout_marginTop="25dp"
                 android:backgroundTint="@color/pink_psychic"
                 android:text="@string/psychic"
-                android:textColor="#212121"
                 android:textSize="10dp"
                 tools:ignore="SpUsage,TextContrastCheck" />
 
@@ -419,7 +482,6 @@
                 android:layout_marginTop="25dp"
                 android:backgroundTint="@color/teal_200"
                 android:text="@string/ice"
-                android:textColor="#5E35B1"
                 android:textSize="10dp"
                 tools:ignore="SpUsage" />
 
