--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -27,5 +27,9 @@
         android:id="@+id/levelFragment"
         android:name="com.example.pokedex.LevelFragment"
         android:label="fragment_pokemon_detail"
-        tools:layout="@layout/fragment_pokemon_detail" />
+        tools:layout="@layout/fragment_pokemon_detail" >
+        <action
+            android:id="@+id/action_levelFragment_to_pokemonDataFragment"
+            app:destination="@id/pokemonDataFragment" />
+    </fragment>
 </navigation>
