--- a/app/src/main/res/layout/fragment_pokemon_data.xml
+++ b/app/src/main/res/layout/fragment_pokemon_data.xml
@@ -12,7 +12,7 @@
 
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/menuVermelho"
+        android:id="@+id/menuGrid"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:backgroundTint="@color/red"
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/menuVermelho">
+        app:layout_constraintTop_toBottomOf="@+id/menuGrid">
 
         <EditText
             android:id="@+id/outlinedTextField"
