--- a/app/src/main/res/layout/item_egg.xml
+++ b/app/src/main/res/layout/item_egg.xml
@@ -3,7 +3,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".acitivy.SkillActivity"
+    tools:context=".DetailActivity"
     >
 
 
