--- a/app/src/main/res/layout/poke_fragment.xml
+++ b/app/src/main/res/layout/poke_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LevelFragment"
+    tools:context=".DetailActivity"
     android:id="@+id/telaLogin"
     android:orientation="vertical"
     android:background="@color/white"
@@ -13,11 +13,12 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:id="@+id/menuVermelho"
+        android:id="@+id/menuGrid"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/menuDetalhado"
         app:layout_constraintStart_toStartOf="parent"
-        android:backgroundTint="@color/red">
+        android:backgroundTint="@color/red"
+        android:background="@color/red">
 
         <TextView
             android:layout_width="wrap_content"
@@ -105,18 +106,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:background="@color/white"
-        app:layout_constraintTop_toBottomOf="@+id/menuVermelho"
+        app:layout_constraintTop_toBottomOf="@+id/menuGrid"
         >
         <androidx.cardview.widget.CardView
             android:layout_width="100dp"
             android:layout_height="match_parent"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:backgroundTint="@color/white">
 
             <TextView
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="@string/Bulbasaur"
-                android:layout_gravity="center_horizontal">
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/black">
 
             </TextView>
 
@@ -126,7 +129,9 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="20dp"
                 android:src="@drawable/bulbasaur"
-                android:contentDescription="@string/app_name">
+                android:contentDescription="@string/app_name"
+                android:backgroundTint="@color/white"
+                android:background="@color/white">
 
             </ImageView>
 
